--- a/exercise4/index.html
+++ b/exercise4/index.html
@@ -4,12 +4,8 @@
            <meta charset="utf-8">
            <title>CSS Practice Site 1</title>
            <link href="css/normalize.css" rel="stylesheet" type="text/css">
-           <link href="css/styles.css" rel="stylesheet" type="text/css">
+           <a href="css/styles.css" rel="stylesheet" type="text/css">
      </head>
-<style>
-body{text-decoration-color:#777}
-post-heading{h3}
-</style>
     <body>
           <header>
               <h1>My First Website</h1>
