--- a/index.html
+++ b/index.html
@@ -5,18 +5,20 @@
            <title>CSS Practice Site 1</title>
            <link href="css/normalize.css" rel="stylesheet" type="text/css">
            <link href="css/styles.css" rel="stylesheet" type="text/css">
+           <style>
+body(
+  color: #777;
+  )
+           </style>
      </head>
-<style>
-body{text-decoration-color:#777}
-post-heading{h3}
-</style>
+
     <body>
           <header>
               <h1>My First Website</h1>
               <blockquote>Ramblings from a Wonderlust</blockquote>
           </header>
         <nav id="main-nav">
-            <ul style="text-decoration-color:#ffcc00">
+            <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Top Places</a></li>
@@ -34,7 +36,7 @@ post-heading{h3}
              </article>
              <aside>
              <h3>Jason's Top 5 Destinations</h3>
-             <ol>
+             <ol style="color: #ffcc00;">
                  <li>Bali</li>
                  <li>Myanmar</li>
                  <li>Damascus</li>
